@@ -1,6 +1,6 @@
 package com.sebrown2023.services;
 
-import com.sebrown2023.exceptions.NoElementException;
+import com.sebrown2023.exceptions.TestNotFoundException;
 import com.sebrown2023.mappers.TestMapper;
 import com.sebrown2023.model.dto.TestComponent;
 import com.sebrown2023.repository.TestRepository;
@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,24 +17,22 @@ public class TestService {
     private final TestMapper testMapper;
 
     public TestComponent getTestComponentById(long testId) {
-        var test = testRepository.findTestById(testId);
-
-        if (test.isPresent()) {
-            return testMapper.testToTestComponent(test.get());
-        } else throw new NoElementException();
+        var test = testRepository.findTestById(testId)
+                .orElseThrow(() -> new TestNotFoundException(testId));
+        return testMapper.testToTestComponent(test);
     }
 
     public List<TestComponent> getAllTestsComponents() {
         var tests = testRepository.findAll();
         return tests.stream()
                 .map(testMapper::testToTestComponent)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TestComponent> getAllTestComponentsByTaskId(long taskId) {
         var tests = testRepository.findTestsByTaskId(taskId);
         return tests.stream().map(testMapper::testToTestComponent)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TestComponent createTest(TestComponent testComponent) {
